--- a/history.html
+++ b/history.html
@@ -14,6 +14,11 @@
 
 	<div id="ui-tab"><!--ui-tab-->
 
+	<h3>2025年</h3>
+	<dl class="topics">
+		<dt>2025.6.?</dt><dd><a target="_parent" href="camp/camp29.html">第29回合同合宿</a>の詳細を公開。申し込みを開始しました。</dd>
+	</dl>
+
     <h3>2024年</h3>
 	<dl class="topics">
 		<dt>2024.12.15</dt><dd><a target="_parent" href="camp/camp_ad6.html">第6回Advanced合宿</a>の詳細を公開。申し込みを開始しました。</dd>
