--- a/outline/outline.html
+++ b/outline/outline.html
@@ -540,240 +540,8 @@ zoom: 1;
         <li><a href="../others/link.html">リンク</a></li>
       </ul>
     </div>
-
-    <!-- コンテンツ開始 -->
-
-    <div id="container">
-      <div id="contents">
-
-        <!-- <center><img src="../img/2022/camp23/top23_2.jpg" width="400px"></center><br> -->
-        <center><img src="../img/2025/camp_adv6/adv6th_pos.png" width="400px"></center><br>
-
-        <h2>第6回　数物セミナー合同合宿Advanced</h2>
-        <p>
-          2025年3月8日(土)から3月10日(月)に数物セミナー合同合宿Advancedを開催します。<br>
-          本合宿では数学・物理に興味のある院生・学部生の交流を目的とし、
-          2泊3日の合宿の中で、セミナーと夜ゼミを中心とした活動を行います。
-          セミナーにおいては従来の合宿とは異なり，発展的な内容を取り扱うことができます．
-        </p>
-        <p>
-          <font color="red"  background-color:yellow>
-            各リレーセミナー班の分野紹介、難易度、前提知識をまとめた資料を作成しました。グループセミナー班選択の参考にしてください</font>。
-            <br />
-            &#91;<a href="https://drive.google.com/file/d/1Kd5P9mrT7-S-vywUI2X9yFMm6DzUNj3b/view?usp=drive_link">pdf</a>&#93;
-        </p>
-
-
-        <h6>概要</h6>
-
-        <table class="simple">
-          <tbody>
-            <tr>
-              <td>◇期日</td>
-              <td>2025年3月8日(土)～3月10日(月) 2泊3日</td>
-            </tr>
-            <tr>
-              <td>◇開催地</td>
-              <td><a href="https://fujinosato.niye.go.jp/">国立中央青少年交流の家</a><br />
-                &nbsp;(静岡県御殿場市中畑2092-5)</td>
-              </tr>
-              <tr>
-                <td>◇集合場所</td>
-                <td>三島駅</td>
-              </tr>
-              <tr>
-                <td>◇募集締切</td>
-                <td>2024年12月28日(土)</td>
-              </tr>
-              <tr>
-                <td>◇参加費</td>
-                <td>11,500円(変動の可能性あり)<br />
-                  ※本合宿にかかる費用、その他数物セミナー全体の運営に関わる費用に用いられます。<br />
-                  <!--打ち上げ（任意参加）の費用は含まれておりません。<br />-->
-                  また、参加費の一部が実行委員の交通費等に充てられます。<br />
-                  集金は参加内定通知後、ゆうちょで行います。<br />
-                </tr>
-                <tr>
-                  <td>◇参加対象</td>
-                  <td>数学・物理を専門とする学部生・大学院生・数物OBOG
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-
-          <h6>参加申し込み</h6>
-          <p>
-            参加申し込みは<a href="https://forms.gle/Kt4DoufNT9duZzPv6">こちら</a>からお願いします。<br>
-            今回は数物セミナー合同合宿と数物セミナーAdvancedの2つの合宿を開催予定です。合同合宿は学部生向け、Advancedは意欲のある学部生・大学院生以上向けの合宿となっております。間違えて目当てではない合宿に応募しないようご注意下さい。
-            なお、それぞれ会場は同じで日程はかぶっておりませんので、両方参加することも可能です。<br>
-            <br>
-            <br>
-            【注意1】申し込みが完了するとただちに「申し込み時に入力したPCメールアドレス」宛てに確認のメールが届きますのでご確認ください。<br />
-            【注意2】期間内であれば、申し込み内容の訂正を承ります。<br />
-            【注意3】内定通知を送付した時点では、あくまでも参加仮登録となり、参加費用の振り込みをいただいて初めて本登録となります。
-                    期限までに振り込まれなかった場合、参加取り消しとなる可能性があるので、ご注意ください。<br />
-            【注意4】参加申し込みの際にご入力頂いた個人情報に関しては、数物セミナー幹部と実行委員会内で保管し、本合宿の運営、
-                    また次回以降の合宿の告知、広報のための統計データに用います。<br />
-            【注意5】但し、運営に必要な範囲で、その他の数物セミナーの会員に一部情報の受け渡しを行います。<br />
-            【注意6】本合宿中に発生したトラブルに対し、数物セミナーでは責任を負いかねますので、ご了承ください。<br />
-            <br>
-            本合宿に申込みいただき、参加が決定された場合の流れは以下のようになります。<br />
-            <ol style="padding-left:50px;">
-              <li>
-                応募時に入力いただいたメールアドレスに、参加内定通知メールが届きます。<br />
-                内容をご確認ください。
-              </li>
-              <li>
-                それと並行して、所定の口座への参加費用の振り込みを行っていただきます。
-              </li>
-              <li>
-                各自でリレー式セミナーの発表準備を行っていただきます。<br />
-                また、特別講義やポスターセッションにて発表する方は、各発表の準備を行ってください。
-              </li>
-              <li>
-                合宿当日は、集合時間までに集合場所へお越しください。<br />
-                質問等がございましたら、お早めに<a href="../others/mail.html">数物セミナーまでご連絡</a>ください。
-              </li>
-            </ol>
-          </p>
-
-
-
-  <h6>グループセミナー</h6>
-  <p>
-    合宿中の主な活動の1つが、グループセミナーです。 
-    これは、分野別の班に分かれて、各班で内容を決めて行うセミナーです。
-    9時間程度の時間を取り発表を行います。
-    発表内容について班員で議論を行い、理解を深めるといったことも行います。
-    班の割り振りは、参加申込フォームの希望アンケートを元に教務で決定し、参加当選の通知とともにお知らせします。 その後，当団体から電子掲示板といった話し合う場をご連絡いたします．
-    従来の合宿とは異なり，各自が専門とする分野のオムニバスセミナーなど少し難しい内容を扱うことも班員との相談次第では可能です．
-    <br /><br />
-
-    <b>＜リレー式セミナーテーマ候補 数学＞</b><br />
-    安定ホモトピー論、代数幾何学、Shubert cakcules、組み合わせ論、表現論、確率解析、関数解析、最適輸送、離散最適化または数論、数論、複素幾何、双曲幾何、大尺度幾何
-
-    <br /><br />
-    <b>＜リレー式セミナーテーマ候補 物理＞</b><br />
-    量子基礎論、数理物理、物性場の理論、経路積分、生物物理学、操作論による量子論、宇宙・地球惑星物理、素粒子論
-    <br><br>
-
-    <!-- <b>＜その他＞</b><br>
-    数理物理 -->
-  </p>
-
-<table style="margin: 10px 0 25px 36px; border-spacing: 10px 0;">
-  <tr>
-    <td>
-      <a href="../img/2018/camp17/rs17_1.jpg" data-lightbox="img1" title="リレーセミナー風景">
-        <img src="../img/2018/camp17/rs17_1r.jpg" alt="" />
-      </a>
-    </td>
-    <td>
-      <a href="../img/2018/camp17/rs17_2.jpg" data-lightbox="img1" title="リレーセミナー風景">
-        <img src="../img/2018/camp17/rs17_2r.jpg" alt="" />
-      </a>
-    </td>
-    <td>
-      <a href="../img/2018/camp17/rs17_3.jpg" data-lightbox="img1" title="リレーセミナー風景">
-        <img src="../img/2018/camp17/rs17_3r.jpg" alt="" />
-      </a>
-    </td>
-  </tr>
-</table>
-
-<p>
-  リレーセミナーテーマ候補となっている各分野についての概要や、過去に使用した教科書などの情報は「リレーセミナーデータベース」のページで公開しています。
-  また、主にセミナー未経験の新入生向けに、セミナー進め方についての説明を「リレーセミナーの流れ」のページで公開しています。
-</p>
-
-<!-- <a href="http://spm.sub.jp/db/"><img src="../img/2014/camp11/semi1.png" width="290" style="float:left;margin:0 10px 0 40px;" /></a> -->
-<a href="how_to_seminar.html"><img src="../img/2014/camp11/semi2.png" width="290" style="margin:0;" /></a>
-<br /><br />
-
-<h6>夜ゼミ</h6>
-<p>
-  講義室を開放し、各自で自由にポスターセッションや雑談などを行います。<br>
-  例えば、専門的・高度な内容について議論したり、 ホワイトボードを使って問題を出し合い議論したり、 スライドを用意して発表を行ったりすることができます。<br>
-  特に、ポスターセッションの発表希望者の方は、事前にポスターを用意して持参してください。 
-  <a href="http://sdrv.ms/IKoF6Q">サンプルポスター</a>
-</p>
-
-<table style="margin: 10px 0 25px 36px; border-spacing: 10px 0;">
-  <tr>
-    <td>
-      <a href="../img/2018/camp17/sl17_1.jpg" data-lightbox="img1" title="夜ゼミ">
-        <img src="../img/2018/camp17/sl17_1r.jpg" alt="" />
-      </a>
-    </td>
-    <td>
-      <a href="../img/2018/camp17/sl17_2.jpg" data-lightbox="img1" title="夜ゼミ">
-        <img src="../img/2018/camp17/sl17_2r.jpg" alt="" />
-      </a>
-    </td>
-    <td>
-      <a href="../img/2018/camp17/sl17_3.jpg" data-lightbox="img1" title="夜ゼミ">
-        <img src="../img/2018/camp17/sl17_3r.jpg" alt="" />
-      </a>
-    </td>
-  </tr>
-</table>
-
-<table style="margin: 10px 0 25px 36px; border-spacing: 10px 0;">
-  <tr>
-    <td>
-      <a href="../img/2018/camp17/es17_1.jpg" data-lightbox="img1" title="特別講義風景">
-        <img src="../img/2018/camp17/es17_1r.jpg" alt="" />
-      </a>
-    </td>
-    <td>
-      <a href="../img/2018/camp17/es17_2.jpg" data-lightbox="img1" title="特別講義風景">
-        <img src="../img/2018/camp17/es17_2r.jpg" alt="" />
-      </a>
-    </td>
-    <td>
-      <a href="../img/2018/camp17/es17_3.jpg" data-lightbox="img1" title="特別講義風景">
-        <img src="../img/2018/camp17/es17_3r.jpg" alt="" />
-      </a>
-    </td>
-  </tr>
-</table>
-
-
-
-<h6>運営</h6>
-<p>
-  本合宿の運営は、第6回数物セミナーAdvanced実行委員会を中心に行います。<br /><br />
-  <img src="../img/2025/camp_adv6/adv6_member.png" alt="" width="570px" />
-</p>
-
-<br /></div><!-- contents -->
-
-<!-- コンテンツ終了 -->
-<!-- サイドメニュー開始 -->
-
-<div id="menu">
-
-  <div id="sns">
-    <div id="shareme" data-url="http://physmathseminar.web.fc2.com/camp/camp22.html" data-text="数物セミナー公式HP 第22回合同合宿"></div>
-  </div>
-
-  <script src="../src/jqsq2.js" type="text/javascript"></script>
-
-</div>
-<!-- サイドメニュー終了 -->
-
-<!-- フッター開始 -->
-
-<div id="footer">Copyright (C) 2022 数物セミナー運営会 All Rights Reserved. design by <a href="http://simptemp.com/">SimpTemp</a></div>
-
-<!-- フッター終了 -->
-
-</div><!-- container -->
-</div><!-- main -->
-
-</body>
-
-</html><!-- ここのメンバーを29回ように変える！！　-->
+	
+<!-- ここのメンバーを29回ように変える！！　-->
         <font color="red">数物セミナー運営会は2017年度から数物セミナーに名称を変更しました。</font>
 				数物セミナーは、関東と近畿20人以上の学部生によって運営されています。
 				運営会の中心的役割を果たすのが、以下に挙げる役職です：
