--- a/camp/camp29.html
+++ b/camp/camp29.html
@@ -118,7 +118,7 @@ zoom: 1;
 
     <div id="container">
       <div id="contents">
-        <center><img src="../img/2025/camp29/spm29th_pos.png" width="400px"></center><br>
+        <center><img src="../img/2025/camp28/spm28th_pos.png" width="400px"></center><br>
 
         <h2>第29回 数物セミナー合同合宿</h2>
         <p>
@@ -131,8 +131,10 @@ zoom: 1;
         <p>
           <font color="red"  background-color:yellow>
             各リレーセミナー班の分野紹介、難易度、前提知識をまとめた資料を作成しました。リレーセミナー班選択の参考にしてください</font>。<br />
-            ・RS班希望について &#91;<a href="../img/2025/camp29/RS_29th.pdf">pdf</a>&#93;
+            ・RS班希望について &#91;<a href="../img/2025/camp28/RS_28th.pdf">pdf</a>&#93;
         </p>
+
+        <!-- ここのPDFを29回ように変える！！　-->
 
 
         <h6>概要</h6>
@@ -155,11 +157,11 @@ zoom: 1;
               </tr> 
               <tr>
                 <td>◇募集期間</td>
-                <td>2025年6月日()～6月21日(土)</td>
+                <td>2024年月日()～6月21日(土)</td>
               </tr>
               <tr>
                 <td>◇参加費</td>
-                <td>18,000円<br />
+                <td>,円<br />
                   ※本合宿にかかる費用、その他数物セミナー全体の運営に関わる費用に用いられます。<br />
                   <!--打ち上げ（任意参加）の費用は含まれておりません。<br />-->
                   また、参加費の一部が実行委員の交通費等に充てられます。<br />
