--- a/camp/camp.html
+++ b/camp/camp.html
@@ -466,10 +466,10 @@
 							<td><a href="camp28.html">28</a></td>
 							<td>静岡(国立中央青少年交流の家)</td>
 							<td>-</td>
-							<td>(参加人数)</td>
+							<td>150</td>
 							<td>16,000</td>
-							<td>テーマ</td>
-							<td>開催報告</a></td>
+							<td>複素解析学・微分方程式論・函数解析学・ルベーグ積分・確率論・群論・可換代数・ガロア理論・表現論・圏論・整数論・位相空間論・多様体論・微分幾何学・リーマン幾何学・代数トポロジー・代数幾何学・数学基礎論・数理統計学・組み合せ論・解析力学・電磁気学・量子力学・量子情報・場の量子論・一般相対論・素粒子論・熱力学・統計力学・流体力学・物性物理・宇宙物理・生物物理・数理物理・機械学習</td>
+							<td></a></td>
 						</tr>
 
 					</tbody>
@@ -544,7 +544,7 @@
 							<td>-</td>
 							<td>(参加人数)</td>
 							<td>11,500</td>
-							<td>テーマ</td>
+							<td>安定ホモトピー論、代数幾何学、Shubert cakcules、組み合わせ論、表現論、確率解析、関数解析、最適輸送、離散最適化または数論、数論、複素幾何、双曲幾何、大尺度幾何・量子基礎論、数理物理、物性場の理論、経路積分、生物物理学、操作論による量子論、宇宙・地球惑星物理、素粒子論</td>
 							<td>開催報告</a></td>
 						</tr>
 
