--- a/camp/camp29.html
+++ b/camp/camp29.html
@@ -118,7 +118,7 @@ zoom: 1;
 
     <div id="container">
       <div id="contents">
-        <center><img src="../img/2025/camp28/spm28th_pos.png" width="400px"></center><br>
+        <center><img src="../img/2025/camp29/spm29th_pos.png" width="400px"></center><br>
 
         <h2>第29回 数物セミナー合同合宿</h2>
         <p>
@@ -131,10 +131,8 @@ zoom: 1;
         <p>
           <font color="red"  background-color:yellow>
             各リレーセミナー班の分野紹介、難易度、前提知識をまとめた資料を作成しました。リレーセミナー班選択の参考にしてください</font>。<br />
-            ・RS班希望について &#91;<a href="../img/2025/camp28/RS_28th.pdf">pdf</a>&#93;
+            ・RS班希望について &#91;<a href="../img/2025/camp29/RS_29th.pdf">pdf</a>&#93;
         </p>
-
-        <!-- ここのPDFを29回ように変える！！　-->
 
 
         <h6>概要</h6>
@@ -151,17 +149,18 @@ zoom: 1;
               <td><a href="https://awaji.niye.go.jp">国立淡路青少年交流の家</a><br />
                 &nbsp;(兵庫県南あわじ市阿万塩屋町７５７−３９)</td>
               </tr>
+              <!-- ここ入れる！！　-->
               <tr>
                 <td>◇集合場所</td>
                 <td>JR </td>
               </tr> 
               <tr>
                 <td>◇募集期間</td>
-                <td>2024年月日()～6月21日(土)</td>
+                <td>2024年6月1日(日)～6月21日(土)</td>
               </tr>
               <tr>
                 <td>◇参加費</td>
-                <td>,円<br />
+                <td>18,000円<br />
                   ※本合宿にかかる費用、その他数物セミナー全体の運営に関わる費用に用いられます。<br />
                   <!--打ち上げ（任意参加）の費用は含まれておりません。<br />-->
                   また、参加費の一部が実行委員の交通費等に充てられます。<br />
@@ -175,8 +174,8 @@ zoom: 1;
             </table>
 
           <h6>参加申し込み</h6>
-          <p><!-- ここのリンクを29回ように変える！！　-->
-            参加申し込みは<a href="https://docs.google.com/forms/d/e/1FAIpQLScP5pfkiE98byUkKiBWHWFyA5g3XWokaQbvCV4foYRsDgDFOw/viewform">こちら</a>からお願いします。<br>
+          <p>
+            参加申し込みは<a href="https://docs.google.com/forms/d/e/1FAIpQLSelvuup-SIFz_F0dVTgxYZx7Ogj37yNk18sab9D8ppZ6pgt-Q/viewform?usp=header">こちら</a>からお願いします。<br>
             今回は数物セミナー合同合宿と数物セミナーAdvancedの2つの合宿を開催予定です。合同合宿は学部生向け、Advancedは意欲のある学部生・大学院生以上向けの合宿となっております。間違えて目当てではない合宿に応募しないようご注意下さい。
             なお、それぞれ会場は同じで日程はかぶっておりませんので、両方参加することも可能です。<br>
             <br>
@@ -212,7 +211,9 @@ zoom: 1;
               </li>
             </ol>
           </p>
-
+        </div>
+      </div>
+    </div>
 
 
   <h6>リレーセミナー</h6>
@@ -228,14 +229,12 @@ zoom: 1;
     ご自分の専門分野の高度な内容を議論したいという方は夜ゼミの時間等を利用し、
     リレー式セミナーは普段あまりやらないような分野を選ばれることをお勧めします。<br /><br />
 
-    <!-- ここのテーマを29回ように変える！！　-->
-
     <b>＜リレー式セミナーテーマ候補 数学＞</b><br />
-    複素解析学・微分方程式論・函数解析学・ルベーグ積分・確率論・群論・可換代数・ガロア理論・表現論・圏論・整数論・位相空間論・多様体論・微分幾何学・リーマン幾何学・代数トポロジー・代数幾何学・数学基礎論・数理統計学・組み合せ論
+    複素解析学・フーリエ解析・函数解析学・微分方程式論・ルベーグ積分・可積分系・確率論・群論・可換代数・ガロア理論・有限群の表現論・リー群の表現論・圏論・層論・整数論・位相空間論・多様体論・微分幾何学・リーマン幾何学・代数トポロジー・数学基礎論・数理統計学・組合せ論
 
     <br /><br />
     <b>＜リレー式セミナーテーマ候補 物理＞</b><br />
-    解析力学・電磁気学・量子力学・量子情報・場の量子論・一般相対論・素粒子論・熱力学・統計力学・流体力学・物性物理・宇宙物理・生物物理・数理物理・機械学習
+    解析力学・電磁気学・熱力学・相対性理論・量子力学・統計力学・非平衡統計力学・量子情報・場の量子論・一般相対論・素粒子論・統計力学・流体力学・固体物理学・宇宙物理学・生物物理学・数理物理学
 
     <br /><br />
   </p>
@@ -334,9 +333,9 @@ zoom: 1;
 
 
 <h6>運営</h6>
-<p><!-- ここのメンバーを29回ように変える！！　-->
-  本合宿の運営は、数物セミナーの第28回合同合宿実行委員会を中心に行います。<br /><br />
-  <img src="../img/2025/camp28/member_28th.png" alt="" width="500px" />
+<p>
+  本合宿の運営は、数物セミナーの第29回合同合宿実行委員会を中心に行います。<br /><br />
+  <img src="../img/2025/camp29/member_29th.png" alt="" width="500px" />
 </p>
 
 <br /></div><!-- contents -->
