--- a/camp/camp_ad7.html
+++ b/camp/camp_ad7.html
@@ -119,7 +119,7 @@ zoom: 1;
       <div id="contents">
 
         <!-- <center><img src="../img/2022/camp23/top23_2.jpg" width="400px"></center><br> -->
-        <center><img src="../img/2025/camp_adv6/adv6th_pos.png" width="400px"></center><br>
+        <center><img src="../img/2025/camp_adv7/adv7th_pos.png" width="400px"></center><br>
 
         <h2>第7回 数物セミナー合同合宿Advanced</h2>
         <p>
@@ -150,6 +150,7 @@ zoom: 1;
               <td><a href="https://noto.niye.go.jp">国立能登青少年交流の家</a><br />
                 &nbsp;(石川県羽咋市柴垣町１４−５−６)</td>
               </tr>
+              <!-- ここ入れる！！　-->
               <tr>
                 <td>◇集合場所</td>
                 <td></td>
@@ -316,9 +317,9 @@ zoom: 1;
 
 
 <h6>運営</h6>
-<p><!-- ここのメンバーを29回ように変える！！　-->
-  本合宿の運営は、第6回数物セミナーAdvanced実行委員会を中心に行います。<br /><br />
-  <img src="../img/2025/camp_adv6/adv6_member.png" alt="" width="570px" />
+<p>
+  本合宿の運営は、第7回数物セミナーAdvanced実行委員会を中心に行います。<br /><br />
+  <img src="../img/2025/camp_adv7/adv7_member.png" alt="" width="570px" />
 </p>
 
 <br /></div><!-- contents -->
