--- a/camp/camp29.html
+++ b/camp/camp29.html
@@ -152,7 +152,7 @@ zoom: 1;
               <!-- ここ入れる！！　-->
               <tr>
                 <td>◇集合場所</td>
-                <td>JR </td>
+                <td>三宮駅</td>
               </tr> 
               <tr>
                 <td>◇募集期間</td>
