--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 		<center><a href="camp/camp29.html"><img src="img/2025/camp29/spm29th_pos.png" alt="" width="450px"></a></center>
 	</div>	
 
+	adv7thの募集はまだ始まっていません
+
 	<!--a href="camp/camp13.html" data-slidr="two"><img src="img/2015/camp13/announce13.png" alt="" /></a>
 	</div>
 
