--- a/camp/camp_ad7.html
+++ b/camp/camp_ad7.html
@@ -124,17 +124,17 @@ zoom: 1;
         <h2>第7回 数物セミナー合同合宿Advanced</h2>
         <p>
           2025年9月27日(土)から9月30日(火)に数物セミナー合同合宿Advancedを開催します。<br>
-          本合宿では数学・物理に興味のある院生・学部生の交流を目的とし、
+          本合宿では数学・物理に興味のある大学院生・学部生の交流を目的とし、
           3泊4日の合宿の中で、セミナーと夜ゼミを中心とした活動を行います。
           セミナーにおいては従来の合宿とは異なり，発展的な内容を取り扱うことができます．
         </p>
         <p>
           <font color="red"  background-color:yellow>
-            各リレーセミナー班の分野紹介、難易度、前提知識をまとめた資料を作成しました。グループセミナー班選択の参考にしてください</font>。
+            各リレーセミナー班の分野紹介、前提知識をまとめた資料を作成しました。
+            リレーセミナー班選択の学部生向けの数物セミナー合同合宿とはリレーセミナー班の班員募集の形式が大きく異なりますので必ずお読みください。</font>。
             <br />
-            &#91;<a href="https://drive.google.com/file/d/1Kd5P9mrT7-S-vywUI2X9yFMm6DzUNj3b/view?usp=drive_link">pdf</a>&#93;
+            &#91;<a href="../img/2025/camp29/RS_ad7th.pdf">pdf</a>&#93;
         </p>
-        <!-- ここのPDF(ドライブ)を29回ように変える！！　-->
 
 
         <h6>概要</h6>
@@ -144,32 +144,34 @@ zoom: 1;
             <tr>
               <td>◇期日</td>
               <td>2025年9月27日(土)～9月30日(火) 3泊4日</td>
+              <td>2025年9月27日(土)～9月29日(月) 2泊3日の参加も可能です</td>
             </tr>
             <tr>
               <td>◇開催地</td>
               <td><a href="https://noto.niye.go.jp">国立能登青少年交流の家</a><br />
                 &nbsp;(石川県羽咋市柴垣町１４−５−６)</td>
               </tr>
-              <!-- ここ入れる！！　-->
+
               <tr>
                 <td>◇集合場所</td>
-                <td></td>
+                <td>未定</td>
               </tr>
               <tr>
                 <td>◇募集締切</td>
-                <td>2025年月日()</td>
+                <td>2025年7月15日(火)</td>
               </tr>
               <tr>
                 <td>◇参加費</td>
-                <td>,円(変動の可能性あり)<br />
-                  ※本合宿にかかる費用、その他数物セミナー全体の運営に関わる費用に用いられます。<br />
+                <td>16,500円(応募人数により変動の可能性あり)<br />
+                  ※参加費は本合宿にかかる費用、その他数物セミナー全体の運営に関わる費用に用いられます。<br />
                   <!--打ち上げ（任意参加）の費用は含まれておりません。<br />-->
                   また、参加費の一部が実行委員の交通費等に充てられます。<br />
-                  集金は参加内定通知後、ゆうちょで行います。<br />
+                  集金は参加内定通知後、ゆうちょ口座への振り込みで行います。<br />
+                  土日月の2泊3日での参加も可能です。その場合の参加費は15,500円となります。
                 </tr>
                 <tr>
                   <td>◇参加対象</td>
-                  <td>数学・物理を専門とする学部生・大学院生・数物OBOG
+                  <td>数学・物理を専門とする学部生・大学院生・数物セミナーOBOG
                   </td>
                 </tr>
               </tbody>
@@ -179,17 +181,17 @@ zoom: 1;
           <p><!-- ここのフォームを29回用に変える！！　-->
             参加申し込みは<a href="https://forms.gle/Kt4DoufNT9duZzPv6">こちら</a>からお願いします。<br>
             今回は数物セミナー合同合宿と数物セミナーAdvancedの2つの合宿を開催予定です。合同合宿は学部生向け、Advancedは意欲のある学部生・大学院生以上向けの合宿となっております。間違えて目当てではない合宿に応募しないようご注意下さい。
-            なお、それぞれ会場は同じで日程はかぶっておりませんので、両方参加することも可能です。<br>
+            なお、それぞれ会場も日程も異なりますので、両方参加することも可能です。<br>
             <br>
             <br>
-            【注意1】申し込みが完了するとただちに「申し込み時に入力したPCメールアドレス」宛てに確認のメールが届きますのでご確認ください。<br />
-            【注意2】期間内であれば、申し込み内容の訂正を承ります。<br />
+            【注意1】申し込みが完了するとただちに「申し込み時に入力したメールアドレス」宛てに確認のメールが届きますのでご確認ください。<br />
+            【注意2】募集期間内であれば、申し込み内容の訂正を承ります。<br />
             【注意3】内定通知を送付した時点では、あくまでも参加仮登録となり、参加費用の振り込みをいただいて初めて本登録となります。
-                    期限までに振り込まれなかった場合、参加取り消しとなる可能性があるので、ご注意ください。<br />
-            【注意4】参加申し込みの際にご入力頂いた個人情報に関しては、数物セミナー幹部と実行委員会内で保管し、本合宿の運営、
+                    期限までに振り込まれなかった場合、参加取り消しとなる可能性がありますので、ご注意ください。<br />
+            【注意4】参加申し込みの際にご入力頂いた個人情報に関しては、数物セミナー執行部と実行委員会内で厳重に保管し、本合宿の運営、
                     また次回以降の合宿の告知、広報のための統計データに用います。<br />
             【注意5】但し、運営に必要な範囲で、その他の数物セミナーの会員に一部情報の受け渡しを行います。<br />
-            【注意6】本合宿中に発生したトラブルに対し、数物セミナーでは責任を負いかねますので、ご了承ください。<br />
+            【注意6】本合宿中に発生した参加者同士でのトラブルに対し、数物セミナーでは責任を負いかねますので、ご了承ください。<br />
             <br>
             本合宿に申込みいただき、参加が決定された場合の流れは以下のようになります。<br />
             <ol style="padding-left:50px;">
@@ -201,8 +203,11 @@ zoom: 1;
                 それと並行して、所定の口座への参加費用の振り込みを行っていただきます。
               </li>
               <li>
-                各自でリレー式セミナーの発表準備を行っていただきます。<br />
-                また、特別講義やポスターセッションにて発表する方は、各発表の準備を行ってください。
+                各自でリレーセミナーの発表準備を行っていただきます。<br />
+                また、学生の皆さんには、ご自身の専攻学問について講話する「夜ゼミ」への参加を推奨しております。講話を希望される学生は、ぜひご準備ください。
+              </li>
+              <li>
+                交流会では、参加者全員に1人10分ほどで、ご自身の専門分野、興味のある分野、または現在熱心に学んでいることについてお話しいただく予定です。
               </li>
               <li>
                 合宿当日は、集合時間までに集合場所へお越しください。<br />
@@ -213,65 +218,46 @@ zoom: 1;
 
 
 
-  <h6>グループセミナー</h6>
+  <h6>リレーセミナー</h6>
   <p>
-    合宿中の主な活動の1つが、グループセミナーです。 
+    合宿中の主な活動の1つが、リレーセミナーです。 
     これは、分野別の班に分かれて、各班で内容を決めて行うセミナーです。
     9時間程度の時間を取り発表を行います。
     発表内容について班員で議論を行い、理解を深めるといったことも行います。
-    班の割り振りは、参加申込フォームの希望アンケートを元に教務で決定し、参加当選の通知とともにお知らせします。 その後，当団体から電子掲示板といった話し合う場をご連絡いたします．
-    従来の合宿とは異なり，各自が専門とする分野のオムニバスセミナーなど少し難しい内容を扱うことも班員との相談次第では可能です．
+    班の割り振りは、参加申込フォームの希望アンケートを元に教務で決定し、参加当選の通知とともにお知らせします。
+    従来の合宿とは異なり，各自が専門とする分野のオムニバスセミナーなど少し難しい内容を扱うことも班員との相談次第では可能です。
     <br /><br />
+    数物セミナー合同合宿とは募集形式が大きく異なるので、必ず各リレーセミナー班のPDF資料を読んでからお申し込みをお願いいたします。<br />
 
     <!-- ここのテーマを29回ように変える！！　-->
-    <b>＜リレー式セミナーテーマ候補 数学＞</b><br />
-    安定ホモトピー論、代数幾何学、Shubert cakcules、組み合わせ論、表現論、確率解析、関数解析、最適輸送、離散最適化または数論、数論、複素幾何、双曲幾何、大尺度幾何
+    <b>＜リレーセミナーテーマ候補 数学＞</b><br />
+    楕円曲線と連分数、力学系と連分数、数論、箙多様体、例外型リー群、Quiver representation、BGG category、Equivariant cohomology、Schubert calculus、代数解析・表現論、複素幾何、ヘッセ幾何班、力学系、偏微分方程式(1)、圏論、圏論的論理学、集合論、超準組合せ論、マルコフ過程、可換環論、偏微分方程式(2)
 
     <br /><br />
-    <b>＜リレー式セミナーテーマ候補 物理＞</b><br />
-    量子基礎論、数理物理、物性場の理論、経路積分、生物物理学、操作論による量子論、宇宙・地球惑星物理、素粒子論
+    <b>＜リレーセミナーテーマ候補 数理物理＞</b><br />
+    数理物理(1)、数理物理(2)、非可換幾何学
     <br><br>
 
-    <!-- <b>＜その他＞</b><br>
-    数理物理 -->
+    <b>＜リレーセミナーテーマ候補 物理＞</b><br />
+    共形場理論、一般化対称性の物理学への応用、非平衡統計力学、アノマリー、地球流体力学
+    <br><br>
+
+    <b>＜リレーセミナーテーマ候補 数学基礎＞</b><br />
+    代数系、幾何系、解析系、その他数学
+    <br><br>
+
+    <b>＜リレーセミナーテーマ候補 物理基礎＞</b><br />
+    素粒子・原子核・宇宙、物性物理、学際
+    <br><br>
   </p>
-
-<table style="margin: 10px 0 25px 36px; border-spacing: 10px 0;">
-  <tr>
-    <td>
-      <a href="../img/2018/camp17/rs17_1.jpg" data-lightbox="img1" title="リレーセミナー風景">
-        <img src="../img/2018/camp17/rs17_1r.jpg" alt="" />
-      </a>
-    </td>
-    <td>
-      <a href="../img/2018/camp17/rs17_2.jpg" data-lightbox="img1" title="リレーセミナー風景">
-        <img src="../img/2018/camp17/rs17_2r.jpg" alt="" />
-      </a>
-    </td>
-    <td>
-      <a href="../img/2018/camp17/rs17_3.jpg" data-lightbox="img1" title="リレーセミナー風景">
-        <img src="../img/2018/camp17/rs17_3r.jpg" alt="" />
-      </a>
-    </td>
-  </tr>
-</table>
-
-<p>
-  リレーセミナーテーマ候補となっている各分野についての概要や、過去に使用した教科書などの情報は「リレーセミナーデータベース」のページで公開しています。
-  また、主にセミナー未経験の新入生向けに、セミナー進め方についての説明を「リレーセミナーの流れ」のページで公開しています。
-</p>
-
-<!-- <a href="http://spm.sub.jp/db/"><img src="../img/2014/camp11/semi1.png" width="290" style="float:left;margin:0 10px 0 40px;" /></a> -->
-<a href="how_to_seminar.html"><img src="../img/2014/camp11/semi2.png" width="290" style="margin:0;" /></a>
-<br /><br />
 
 <h6>夜ゼミ</h6>
 <p>
   講義室を開放し、各自で自由にポスターセッションや雑談などを行います。<br>
   例えば、専門的・高度な内容について議論したり、 ホワイトボードを使って問題を出し合い議論したり、 スライドを用意して発表を行ったりすることができます。<br>
-  特に、ポスターセッションの発表希望者の方は、事前にポスターを用意して持参してください。 
+  特に、ポスターセッションの発表希望者の方は、事前にポスターを用意して持参してください。 また、プロジェクターを使用したい場合は早めに運営まで相談してください。<br>
   <a href="http://sdrv.ms/IKoF6Q">サンプルポスター</a>
-  <!--これどうするよ　-->
+  
 </p>
 
 <table style="margin: 10px 0 25px 36px; border-spacing: 10px 0;">
