--- a/camp/camp_ad7.html
+++ b/camp/camp_ad7.html
@@ -204,10 +204,7 @@ zoom: 1;
               </li>
               <li>
                 各自でリレーセミナーの発表準備を行っていただきます。<br />
-                また、学生の皆さんには、ご自身の専攻学問について講話する「夜ゼミ」への参加を推奨しております。講話を希望される学生は、ぜひご準備ください。
-              </li>
-              <li>
-                交流会では、参加者全員に1人10分ほどで、ご自身の専門分野、興味のある分野、または現在熱心に学んでいることについてお話しいただく予定です。
+                また、参加者の皆さんには、「夜ゼミ」への参加を推奨しております。発表したいことをぜひご準備してご参加ください。
               </li>
               <li>
                 合宿当日は、集合時間までに集合場所へお越しください。<br />
@@ -222,12 +219,13 @@ zoom: 1;
   <p>
     合宿中の主な活動の1つが、リレーセミナーです。 
     これは、分野別の班に分かれて、各班で内容を決めて行うセミナーです。
-    9時間程度の時間を取り発表を行います。
     発表内容について班員で議論を行い、理解を深めるといったことも行います。
     班の割り振りは、参加申込フォームの希望アンケートを元に教務で決定し、参加当選の通知とともにお知らせします。
     従来の合宿とは異なり，各自が専門とする分野のオムニバスセミナーなど少し難しい内容を扱うことも班員との相談次第では可能です。
     <br /><br />
-    数物セミナー合同合宿とは募集形式が大きく異なるので、必ず各リレーセミナー班のPDF資料を読んでからお申し込みをお願いいたします。<br />
+　　<font color="red">
+	      数物セミナー合同合宿とは募集形式が大きく異なるので、必ず各リレーセミナー班のPDF資料を読んでからお申し込みをお願いいたします。<br /> </font>
+
 
     <!-- ここのテーマを29回ように変える！！　-->
     <b>＜リレーセミナーテーマ候補 数学＞</b><br />
