--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
 		<center><a href="camp/camp29.html"><img src="img/2025/camp29/spm29th_pos.png" alt="" width="450px"></a></center>
 	</div>	
 
-	adv7thの募集はまだ始まっていません
+	<div id="slidr-id1" style="margin:0 0 10px 0;">
+		<center><a href="camp/camp_ad7.html"><img src="img/2025/camp29/adv7th_pos.png" alt="" width="450px"></a></center>
+	</div>	
+
 
 	<!--a href="camp/camp13.html" data-slidr="two"><img src="img/2015/camp13/announce13.png" alt="" /></a>
 	</div>
