--- a/discourse/discourse.html
+++ b/discourse/discourse.html
@@ -273,6 +273,11 @@
 			<td>2024</td>
 				  <td>東京海洋大学</td>
 		</tr>
+		<tr>
+			<td><a href="2025/No1/discourse-in-Kyoto-2025.html">京大談話会</a></td>
+			<td>2025</td>
+				  <td>京都大学</td>
+		</tr>
       </tbody>
 		</table>
 </div>
@@ -529,3 +534,4 @@
 	</body>
 
 </html>
+
