--- a/history.html
+++ b/history.html
@@ -16,6 +16,7 @@
 
 	<h3>2025年</h3>
 	<dl class="topics">
+		<dt>2025.12.3</dt><dd><a target="_parent" href="discourse/2025/No1/discourse-in-Kyoto-2025.html">京大談話会</a>の詳細を公開しました。</dd>
 		<dt>2025.6.28</dt><dd><a target="_parent" href="camp/camp_ad7.html">第7回Advanced合宿</a>の詳細を公開。申し込みを開始しました。</dd>
 		<dt>2025.6.1</dt><dd><a target="_parent" href="camp/camp29.html">第29回合同合宿</a>の詳細を公開。申し込みを開始しました。</dd>
 	</dl>
@@ -199,3 +200,4 @@
 
     </body>
 </html>
+
