--- a/camp/camp_ad8.html
+++ b/camp/camp_ad8.html
@@ -147,26 +147,24 @@ zoom: 1;
             </tr>
             <tr>
               <td>◇開催地</td>
-              <td><a href="https://noto.niye.go.jp">国立能登青少年交流の家</a><br />
-                &nbsp;(石川県羽咋市柴垣町１４−５−６)</td>
+              <td><a href="https://fujinosato.niye.go.jp/">国立中央青少年交流の家</a><br />
+                &nbsp;(静岡県御殿場市中畑2092-5)</td>
               </tr>
-
               <tr>
                 <td>◇集合場所</td>
-                <td>未定</td>
-              </tr>
+                <td>JR 三島駅</td>
+              </tr> 
               <tr>
                 <td>◇募集締切</td>
-                <td>2025年7月15日(火)</td>
+                <td>2025年12月14日(日)</td>
               </tr>
               <tr>
                 <td>◇参加費</td>
-                <td>16,500円(応募人数により変動の可能性あり)<br />
+                <td>17,000円(応募人数により変動の可能性あり)<br />
                   ※参加費は本合宿にかかる費用、その他数物セミナー全体の運営に関わる費用に用いられます。<br />
                   <!--打ち上げ（任意参加）の費用は含まれておりません。<br />-->
                   また、参加費の一部が実行委員の交通費等に充てられます。<br />
                   集金は参加内定通知後、ゆうちょ口座への振り込みで行います。<br />
-                  土日月の2泊3日での参加も可能です。その場合の参加費は15,500円となります。
                 </tr>
                 <tr>
                   <td>◇参加対象</td>
@@ -178,8 +176,8 @@ zoom: 1;
 
           <h6>参加申し込み</h6>
           <p><!-- ここのフォームを29回用に変える！！　-->
-            参加申し込みは<a href="https://docs.google.com/forms/d/e/1FAIpQLSczOXz2tIwLwT56oIBrwXXWfy9cUTnjgJ7BwfbURUXaFKDr6g/viewform?usp=dialoghttps://forms.gle/Kt4DoufNT9duZzPv6">こちら</a>からお願いします。<br>
-            今回は数物セミナー合同合宿と数物セミナーAdvancedの2つの合宿を開催予定です。合同合宿は学部生向け、Advancedは意欲のある学部生・大学院生以上向けの合宿となっております。間違えて目当てではない合宿に応募しないようご注意下さい。
+            参加申し込みは<a href="https://forms.gle/zFkBA7E8n8pmZqeu7">こちら</a>からお願いします。<br>
+            今回も数物セミナー合同合宿と数物セミナーAdvancedの2つの合宿を開催予定です。合同合宿は学部生向け、Advancedは意欲のある学部生・大学院生以上向けの合宿となっております。間違えて目当てではない合宿に応募しないようご注意下さい。
             なお、それぞれ会場も日程も異なりますので、両方参加することも可能です。<br>
             <br>
             <br>
@@ -223,28 +221,23 @@ zoom: 1;
     従来の合宿とは異なり，各自が専門とする分野のオムニバスセミナーなど少し難しい内容を扱うことも班員との相談次第では可能です。
     <br /><br />
 　　<font color="red">
-	      数物セミナー合同合宿とは募集形式が大きく異なるので、必ず各リレーセミナー班のPDF資料を読んでからお申し込みをお願いいたします。<br /> </font>
+	      数物セミナー合同合宿とは募集形式が大きく異なるので、必ず各リレーセミナー班のPDF資料を読んでからお申し込みをお願いいたします。<br />
+  		<p> &#91;<a href="../img/2025/camp_adv8/RS_ad8th.pdf">pdf</a>&#93; </p> 
+  </font>
 
 
     <!-- ここのテーマを29回ように変える！！　-->
-    <b>＜リレーセミナーテーマ候補 数学＞</b><br />
-    楕円曲線と連分数、力学系と連分数、数論、箙多様体、例外型リー群、Quiver representation、BGG category、Equivariant cohomology、Schubert calculus、代数解析・表現論、複素幾何、ヘッセ幾何班、力学系、偏微分方程式(1)、圏論、圏論的論理学、集合論、超準組合せ論、マルコフ過程、可換環論、偏微分方程式(2)
-
+    <b>＜リレーセミナーテーマ候補 数学(班長付き班)＞</b><br />
+	グラフ曲率，双有理幾何学，CW 複体，Mahler 測度とその周辺，モチーフ，渡辺 Bayes，差分方程式，非可換幾何，特異点，スピン幾何，作用素環論 (1)，作用素環論 (2)，condensed math，岩澤理論，幾何解析，幾何学的表現論，幾何学的モデル理論，スピン幾何学とゲージ理論
+	  
     <br /><br />
-    <b>＜リレーセミナーテーマ候補 数理物理＞</b><br />
-    数理物理(1)、数理物理(2)、非可換幾何学
+    <b>＜リレーセミナーテーマ候補 物理(班長付き班)＞</b><br />
+    超弦理論，JT 重力とホログラフィ，開放系の量子力学，凝縮系の場の量子論，非線形レオロジー，地球流体力学，Lie 群・Lie 代数
     <br><br>
 
-    <b>＜リレーセミナーテーマ候補 物理＞</b><br />
-    共形場理論、一般化対称性の物理学への応用、非平衡統計力学、アノマリー、地球流体力学
-    <br><br>
-
-    <b>＜リレーセミナーテーマ候補 数学基礎＞</b><br />
-    代数系、幾何系、解析系、その他数学
-    <br><br>
-
-    <b>＜リレーセミナーテーマ候補 物理基礎＞</b><br />
-    素粒子・原子核・宇宙、物性物理、学際
+    <b>＜リレーセミナーテーマ候補 基礎班(班長なし班)＞</b><br />
+    数学→代数学，幾何学，解析学<br/>
+	物理→素粒子・原子核・宇宙，物性物理，学際
     <br><br>
   </p>
 
@@ -301,8 +294,8 @@ zoom: 1;
 
 <h6>運営</h6>
 <p>
-  本合宿の運営は、第7回数物セミナーAdvanced実行委員会を中心に行います。<br /><br />
-  <img src="../img/2025/camp_adv7/adv7_member.png" alt="" width="570px" />
+  本合宿の運営は、第8回数物セミナーAdvanced実行委員会を中心に行います。<br /><br />
+  <img src="../img/2025/camp_adv8/adv8_member.png" alt="" width="570px" />
 </p>
 
 <br /></div><!-- contents -->
