--- a/history.html
+++ b/history.html
@@ -16,7 +16,7 @@
 
 	<h3>2025年</h3>
 	<dl class="topics">
-		<dt>2025.12.6</dt><dd><a target="_parent" href="camp/camp_ad8.html">第8回Advanced合宿</a>の詳細を公開。申し込みを開始しました。</dd>
+		<!-- <dt>2025.12.6</dt><dd><a target="_parent" href="camp/camp_ad8.html">第8回Advanced合宿</a>の詳細を公開。申し込みを開始しました。</dd> -->
 		<dt>2025.12.6</dt><dd><a target="_parent" href="discourse/2025/No2/discourse-in-ookayama-2025.html">大岡山談話会</a>の詳細を公開しました。</dd>
 		<dt>2025.12.3</dt><dd><a target="_parent" href="discourse/2025/No1/discourse-in-Kyoto-2025.html">京大談話会</a>の詳細を公開しました。</dd>
 		<dt>2025.6.28</dt><dd><a target="_parent" href="camp/camp_ad7.html">第7回Advanced合宿</a>の詳細を公開。申し込みを開始しました。</dd>
@@ -202,5 +202,6 @@
 
     </body>
 </html>
+
 
 
