--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
 		<center><a href="camp/camp_ad7.html"><img src="img/2025/camp_adv7/adv7th_pos.png" alt="" width="450px"></a></center>
 	</div>	
 	-->
-	<div id="slidr-id1" style="margin:0 0 10px 0;">
+	<!-- <div id="slidr-id1" style="margin:0 0 10px 0;">
 		<center><a href="camp/camp29.html"><img src="img/2025/camp29/spm29th_pos.png" alt="" width="450px"></a></center>
-	</div>	
+	</div>	-->
 
 	<div id="slidr-id1" style="margin:0 0 10px 0;">
-		<center><a href="camp/camp_ad7.html"><img src="img/2025/camp_adv7/adv7th_pos.png" alt="" width="450px"></a></center>
+		<center><a href="camp/camp_ad8.html"><img src="img/2026/camp_adv8/adv8th_pos.png" alt="" width="450px"></a></center>
 	</div>	
 
 
@@ -194,4 +194,5 @@
 
     </body>
 </html>
+
 
