--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 	</div>	-->
 
 	<div id="slidr-id1" style="margin:0 0 10px 0;">
-		<center><a href="camp/camp_ad8.html"><img src="img/2026/camp_adv8/adv8th_pos.png" alt="" width="450px"></a></center>
+		<center><a href="camp/camp_ad8.html"><img src="img/2026/camp_adv8/adv8th_pos.jpg" alt="" width="450px"></a></center>
 	</div>	
 
 
@@ -194,5 +194,6 @@
 
     </body>
 </html>
+
 
 
