--- a/camp/camp30.html
+++ b/camp/camp30.html
@@ -122,10 +122,10 @@ zoom: 1;
 
         <h2>第30回 数物セミナー合同合宿</h2>
         <p>
-          2026年3月15日(日)から3月18日(水)に数物セミナー合同合宿を開催します。
-          ※総会は2026年3月19日(木)に行います。
-          ※応募者多数の場合、抽選になる可能性がありますのでご了承ください。
-          ※Ad8thとの間に1日空きますが、前泊は受け付けていません。
+          2026年3月15日(日)から3月18日(水)に数物セミナー合同合宿を開催します。<br />
+          ※総会は2026年3月19日(木)に行います。<br />
+          ※応募者多数の場合、抽選になる可能性がありますのでご了承ください。<br />
+          ※Ad8thとの間に1日空きますが、前泊は受け付けていません。<br />
           数学・物理に興味のある学部生の交流を目的とし、3泊4日の合宿の中で、リレー式セミナーや夜ゼミを中心とした活動を行います。<br>
            <!-- ここは合同合宿のページです。Advancedは<a href="./camp_ad5.html">こちら</a> -->
           過去の合宿の概要と開催報告には上部タブからアクセスできますので、併せて御覧ください。<br><br>
