--- a/outline/outline.html
+++ b/outline/outline.html
@@ -156,7 +156,7 @@
 				</td>
 				<td class="expl">
 					<u>規模が全国的</u><br />
-					例を挙げるならば、第９回合同合宿には全国の３３の大学から７６名が集まりました。
+					例を挙げるならば、第28回合同合宿には全国の大学から約150名が集まりました。
 					これほど多くの大学から参加者が集まる合宿は珍しいと言えるでしょう。
 					談話会も、関東を中心に全国各地で行われています。
 				</td>
@@ -473,3 +473,4 @@
 	</body>
 
 </html>
+
