--- a/camp/camp.html
+++ b/camp/camp.html
@@ -157,7 +157,7 @@
 					<thead>
 						<tr>
 							<th>回数</th>
-							<th>開催地</th>
+							<th style="width: 10%;">開催地</th>
 							<th>募集数</th>
 							<th>参加数</th>
 							<th>参加費</th>
@@ -471,6 +471,15 @@
 							<td>複素解析学・微分方程式論・函数解析学・ルベーグ積分・確率論・群論・可換代数・ガロア理論・表現論・圏論・整数論・位相空間論・多様体論・微分幾何学・リーマン幾何学・代数トポロジー・代数幾何学・数学基礎論・数理統計学・組み合せ論・解析力学・電磁気学・量子力学・量子情報・場の量子論・一般相対論・素粒子論・熱力学・統計力学・流体力学・物性物理・宇宙物理・生物物理・数理物理・機械学習</td>
 							<td></a></td>
 						</tr>
+						<tr>
+							<td><a href="camp29.html">29</a></td>
+							<td>兵庫(国立淡路青少年交流の家)</td>
+							<td>-</td>
+							<td>-</td>
+							<td>18,000</td>
+							<td>複素解析学・フーリエ解析・函数解析学・微分方程式論・ルベーグ積分・可積分系・確率論・群論・可換代数・ガロア理論・有限群の表現論・リー群の表現論・圏論・層論・整数論・位相空間論・多様体論・微分幾何学・リーマン幾何学・代数トポロジー・数学基礎論・数理統計学・組合せ論・解析力学・電磁気学・熱力学・相対性理論・量子力学・統計力学・非平衡統計力学・量子情報・場の量子論・一般相対論・素粒子論・統計力学・流体力学・固体物理学・宇宙物理学・生物物理学・数理物理学</td>
+							<td></a></td>
+						</tr>
 
 					</tbody>
 				</table>
@@ -481,7 +490,7 @@
 					<thead>
 						<tr>
 							<th>回数</th>
-							<th>開催地</th>
+							<th　style="width: 10%;">開催地</th>
 							<th>募集数</th>
 							<th>参加数</th>
 							<th>参加費</th>
@@ -542,9 +551,18 @@
 							<td><a href="camp_ad6.html">6</a></td>
 							<td>静岡(国立中央青少年交流の家)</td>
 							<td>-</td>
-							<td>(参加人数)</td>
+							<td>-</td>
 							<td>11,500</td>
 							<td>安定ホモトピー論、代数幾何学、Shubert cakcules、組み合わせ論、表現論、確率解析、関数解析、最適輸送、離散最適化または数論、数論、複素幾何、双曲幾何、大尺度幾何・量子基礎論、数理物理、物性場の理論、経路積分、生物物理学、操作論による量子論、宇宙・地球惑星物理、素粒子論</td>
+							<td>-</a></td>
+						</tr>
+						<tr>
+							<td><a href="camp_ad7.html">7</a></td>
+							<td>石川(国立能登青少年交流の家)</td>
+							<td>-</td>
+							<td>-</td>
+							<td>16,500</td>
+							<td>数理物理(1)、数理物理(2)、非可換幾何学・共形場理論、一般化対称性の物理学への応用、非平衡統計力学、アノマリー、地球流体力学・代数系、幾何系、解析系、その他数学，素粒子・原子核・宇宙、物性物理、学際</td>
 							<td>-</a></td>
 						</tr>
 
@@ -580,5 +598,6 @@
 	</div><!-- main -->
 
 </body>
+
 
 </html>
