--- a/camp/camp30.html
+++ b/camp/camp30.html
@@ -161,7 +161,7 @@ zoom: 1;
               </tr>
               <tr>
                 <td>◇参加費</td>
-                <td>未定<br />
+                <td>17500<br />
                   ※本合宿にかかる費用、その他数物セミナー全体の運営に関わる費用に用いられます。<br />
                   <!--打ち上げ（任意参加）の費用は含まれておりません。<br />-->
                   また、参加費の一部が実行委員の交通費等に充てられます。<br />
@@ -176,7 +176,7 @@ zoom: 1;
 
           <h6>参加申し込み</h6>
           <p>
-            参加申し込みは<a href="">こちら</a>からお願いします。<br>
+            参加申し込みは<a href="https://docs.google.com/forms/d/e/1FAIpQLSc2mahwTIiOQ_vIAnupPvPtkce63eNppryE3nd_h_dKda68Lw/viewform?usp=header">こちら</a>からお願いします。<br>
             今回は数物セミナー合同合宿と数物セミナーAdvancedの2つの合宿を開催予定です。合同合宿は学部生向け、Advancedは意欲のある学部生・大学院生以上向けの合宿となっております。間違えて目当てではない合宿に応募しないようご注意下さい。
             なお、それぞれ会場は同じで日程はかぶっておりませんので、両方参加することも可能です。<br>
             <br>
@@ -219,7 +219,7 @@ zoom: 1;
   <p>
     合宿中の主な活動の1つが、リレーセミナーです。
     これは、4人～7人程度の分野別の班に分かれて、各班で教科書を輪読するセミナーです。
-    ??時間程度の時間を取り、一人ずつ班員の前で発表を行います。
+    14時間程度の時間を取り、一人ずつ班員の前で発表を行います。
     発表内容について班員で議論を行い、理解を深めるといったことも行います。<br /><br />
 
     班の割り振りは、参加申込フォームの希望アンケートを元に教務局で決定し、参加当選の通知とともにお知らせします。
