--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 		<center><a href="camp/camp_ad7.html"><img src="img/2025/camp_adv7/adv7th_pos.png" alt="" width="450px"></a></center>
 	</div>	
 	-->
-	<!-- <div id="slidr-id1" style="margin:0 0 10px 0;">
-		<center><a href="camp/camp29.html"><img src="img/2025/camp29/spm29th_pos.png" alt="" width="450px"></a></center>
-	</div>	-->
+	<div id="slidr-id1" style="margin:0 0 10px 0;">
+		<center><a href="camp/camp30.html"><img src="img/2026/camp30/spm30th_pos.png" alt="" width="450px"></a></center>
+	</div>
 
 	<div id="slidr-id1" style="margin:0 0 10px 0;">
 		<center><a href="camp/camp_ad8.html"><img src="img/2026/camp_adv8/adv8th_pos.jpg" alt="" width="450px"></a></center>
@@ -194,6 +194,7 @@
 
     </body>
 </html>
+
 
 
 
